<resources>
    <string name="app_name">Movie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signin">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_pss">Forgot password?</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="asset_top">Asset Top</string>
    <string name="image">Image</string>
    <string name="tittle">Tittle</string>
    <string name="hallo">Hallo, $User</string>
    <string name="popular">Popular</string>
    <string name="image_movie">Image Movie</string>
    <string name="nonton">Mau nonton apa?</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="description">Description</string>
    <string name="enjoy">Enjoy</string>
    <string name="update">Update</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="favorite_user">Favorite $User</string>
    <string name="tv_empty_favorite">Favorite Kamu Kosong!\n\nTekan Love untuk menambahkan list!</string>
</resources>